--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -10,32 +10,32 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "gatsby": "^2.20.12",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby": "^2.22.17",
+    "gatsby-image": "^2.4.6",
+    "gatsby-plugin-manifest": "^2.4.10",
+    "gatsby-plugin-offline": "^3.2.8",
+    "gatsby-plugin-react-helmet": "^3.3.3",
+    "gatsby-plugin-sharp": "^2.6.10",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-apiserver": "^2.1.4",
-    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-source-multi-api": "git+https://github.com/Stevens-EWS/gatsby-source-multi-api.git",
     "gatsby-source-multi-api-FORKED": "https://github.com/Stevens-EWS/gatsby-source-multi-api",
     "gatsby-source-rest-api": "^0.2.3",
-    "gatsby-transformer-sharp": "^2.4.3",
+    "gatsby-transformer-sharp": "^2.5.4",
     "graphiql": "^0.17.5",
     "json-server": "^0.16.1",
     "minify": "^5.1.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-body-classname": "^1.3.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "sanitize-html-react": "^1.13.0",
     "shortid": "^2.2.15"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.4",
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "gatsby"
